# simox

./: CMakeLists.txt  SimoxProject.cmake  config.cmake  readme.txt
GraspPlanning/: ApproachMovementGenerator.cpp  ApproachMovementGenerator.h  ApproachMovementSurfaceNormal.cpp  ApproachMovementSurfaceNormal.h  CMakeLists.txt  ContactConeGenerator.cpp  ContactConeGenerator.h  ConvexHullGenerator.cpp  ConvexHullGenerator.h  GraspStudio.h  config.cmake
GraspPlanning/GraspPlanner/: GenericGraspPlanner.cpp  GenericGraspPlanner.h  GraspPlanner.cpp  GraspPlanner.h
GraspPlanning/GraspQuality/: GraspQualityMeasure.cpp  GraspQualityMeasure.h  GraspQualityMeasureWrenchSpace.cpp  GraspQualityMeasureWrenchSpace.h
GraspPlanning/Visualization/: ConvexHullVisualization.cpp  ConvexHullVisualization.h
GraspPlanning/examples/: CMakeLists.txt
MotionPlanning/: ApproachDiscretization.cpp  ApproachDiscretization.h  CMakeLists.txt  Saba.h  config.cmake
MotionPlanning/CSpace/: CSpace.cpp  CSpace.h  CSpaceNode.cpp  CSpaceNode.h  CSpacePath.cpp  CSpacePath.h  CSpaceSampled.cpp  CSpaceSampled.h  CSpaceTree.cpp  CSpaceTree.h  ConfigurationConstraint.cpp  ConfigurationConstraint.h  Sampler.cpp  Sampler.h
MotionPlanning/Planner/: BiRrt.cpp  BiRrt.h  GraspIkRrt.cpp  GraspIkRrt.h  GraspRrt.cpp  GraspRrt.h  MotionPlanner.cpp  MotionPlanner.h  PlanningThread.cpp  PlanningThread.h  Rrt.cpp  Rrt.h
MotionPlanning/PostProcessing/: PathProcessingThread.cpp  PathProcessingThread.h  PathProcessor.cpp  PathProcessor.h  ShortcutProcessor.cpp  ShortcutProcessor.h
MotionPlanning/Visualization/: RrtWorkspaceVisualization.cpp  RrtWorkspaceVisualization.h
MotionPlanning/examples/: CMakeLists.txt
MotionPlanning/tests/: CMakeLists.txt  SabaCSpaceTest.cpp  SabaShortcutProcessorTest.cpp
SimDynamics/: CMakeLists.txt  DynamicsWorld.cpp  DynamicsWorld.h  README.txt  SimDynamics.h  config.cmake
SimDynamics/CMakeModules/: FindBullet.cmake
SimDynamics/DynamicsEngine/: DynamicsEngine.cpp  DynamicsEngine.h  DynamicsEngineFactory.h  DynamicsObject.cpp  DynamicsObject.h  DynamicsRobot.cpp  DynamicsRobot.h  DynamicsUtils.cpp  DynamicsUtils.h
SimDynamics/examples/: CMakeLists.txt
VirtualRobot/: AbstractFactoryMethod.h  BoundingBox.cpp  BoundingBox.h  CMakeLists.txt  CompressionRLE.cpp  CompressionRLE.h  Grasp.cpp  Grasp.h  GraspSet.cpp  GraspSet.h  KinematicChain.cpp  KinematicChain.h  LinkedCoordinate.cpp  LinkedCoordinate.h  ManipulationObject.cpp  ManipulationObject.h  MathTools.cpp  MathTools.h  Obstacle.cpp  Obstacle.h  Primitive.cpp  Primitive.h  ReachabilitySpace.cpp  ReachabilitySpace.h  Robot.cpp  Robot.h  RobotConfig.cpp  RobotConfig.h  RobotFactory.cpp  RobotFactory.h  RobotNodeSet.cpp  RobotNodeSet.h  RuntimeEnvironment.cpp  RuntimeEnvironment.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  SceneObjectSet.cpp  SceneObjectSet.h  (+12 more)
VirtualRobot/CMakeModules/: FindCoin3D.cmake  FindSoQt.cmake  FindVirtualRobot.cmake  VirtualRobotConfig.cmake.in  VirtualRobotConfigDependencies.cmake  VirtualRobotConfigVersion.cmake.in  VirtualRobotExternalLibrarySetup.cmake  VirtualRobotMacros.cmake  VirtualRobotStandAlone.cmake
VirtualRobot/COLLADA/: ColladaIO.cpp  ColladaIO.h  ColladaIterators.h  ColladaParser.cpp  ColladaParser.h
VirtualRobot/CollisionDetection/: CDManager.cpp  CDManager.h  CMakeLists.txt  CollisionChecker.cpp  CollisionChecker.h  CollisionCheckerImplementation.h  CollisionModel.cpp  CollisionModel.h  CollisionModelImplementation.h
VirtualRobot/Compression/: CompressionBZip2.cpp  CompressionBZip2.h  CompressionRLE.h
VirtualRobot/EndEffector/: EndEffector.cpp  EndEffector.h  EndEffectorActor.cpp  EndEffectorActor.h
VirtualRobot/Grasping/: BasicGraspQualityMeasure.cpp  BasicGraspQualityMeasure.h  Grasp.cpp  Grasp.h  GraspSet.cpp  GraspSet.h
VirtualRobot/IK/: CoMIK.cpp  CoMIK.h  DifferentialIK.cpp  DifferentialIK.h  GazeIK.cpp  GazeIK.h  GenericIKSolver.cpp  GenericIKSolver.h  HierarchicalIK.cpp  HierarchicalIK.h  IKSolver.cpp  IKSolver.h  JacobiProvider.cpp  JacobiProvider.h  JointLimitAvoidanceJacobi.cpp  JointLimitAvoidanceJacobi.h  PoseQualityExtendedManipulability.cpp  PoseQualityExtendedManipulability.h  PoseQualityManipulability.cpp  PoseQualityManipulability.h  PoseQualityMeasurement.cpp  PoseQualityMeasurement.h
VirtualRobot/Import/: RobotImporterFactory.cpp  RobotImporterFactory.h  SimoxCOLLADAFactory.h  SimoxXMLFactory.cpp  SimoxXMLFactory.h
VirtualRobot/Nodes/: CameraSensor.cpp  CameraSensor.h  CameraSensorFactory.cpp  CameraSensorFactory.h  ConditionedLock.h  ContactSensor.cpp  ContactSensor.h  ContactSensorFactory.cpp  ContactSensorFactory.h  ForceTorqueSensor.cpp  ForceTorqueSensor.h  ForceTorqueSensorFactory.cpp  ForceTorqueSensorFactory.h  PositionSensor.cpp  PositionSensor.h  PositionSensorFactory.cpp  PositionSensorFactory.h  RobotNode.cpp  RobotNode.h  RobotNodeActuator.cpp  RobotNodeActuator.h  RobotNodeFactory.h  RobotNodeFixed.cpp  RobotNodeFixed.h  RobotNodeFixedFactory.cpp  RobotNodeFixedFactory.h  RobotNodePrismatic.cpp  RobotNodePrismatic.h  RobotNodePrismaticFactory.cpp  RobotNodePrismaticFactory.h  RobotNodeRevolute.cpp  RobotNodeRevolute.h  RobotNodeRevoluteFactory.cpp  RobotNodeRevoluteFactory.h  Sensor.cpp  Sensor.h  SensorFactory.h
VirtualRobot/Transformation/: DHParameter.h  Transformation.cpp  Transformation.h
VirtualRobot/Visualization/: ColorMap.cpp  ColorMap.h  TriMeshModel.cpp  TriMeshModel.h  Visualization.cpp  Visualization.h  VisualizationFactory.h  VisualizationNode.cpp  VisualizationNode.h
VirtualRobot/Workspace/: Manipulability.cpp  Manipulability.h  Reachability.cpp  Reachability.h  VoxelTree6D.hpp  VoxelTree6DElement.hpp  VoxelTreeND.hpp  VoxelTreeNDElement.hpp  WorkspaceData.cpp  WorkspaceData.h  WorkspaceDataArray.cpp  WorkspaceDataArray.h  WorkspaceGrid.cpp  WorkspaceGrid.h  WorkspaceRepresentation.cpp  WorkspaceRepresentation.h
VirtualRobot/XML/: BaseIO.cpp  BaseIO.h  FileIO.cpp  FileIO.h  ObjectIO.cpp  ObjectIO.h  RobotIO.cpp  RobotIO.h  SceneIO.cpp  (+1 more)
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in  external_project_setup.txt
(+599 files in other folders)
